test: add unit tests and update integration tests
- Update AuthIntegrationTests with i18n support
- Add UserServiceUnitTests for new user service functionality